# cleanEHR

./: .Rbuildignore  .editorconfig  .gitignore  .travis.yml  DESCRIPTION  Makefile  NAMESPACE  README.md  appveyor.yml  cchic_overview.html  data_clean.html  install.r  paper.md  sql.r  tour.R  tour.Rmd  tour.html
R/: ITEM_REF.r  RcppExports.R  aggPatients.r  allPatientsInfo.r  categorical.filter.R  ccDataTable.R  ccDataTable2.R  ccEpisode.r  ccPatient.r  ccRecord.R  ccTable.R  ccdata.r  ccdata2csv.r  cchic_xml.R  checkICNARC.R  computeMortality.r  consecutivetime.r  create2dclean.R  create2dclean.r  csv2ccdata.r  data.R  data.quality.report.R  dbConnection.R  deltaTime.R  deltaTime.r  demographic.table.R  demographics.R  duplicated.episode.R  extractInfo.r  fill.na.r  filter.categorical.R  filter.missingness.R  filter.range.R  findMaxMinTime.R  for_each_episode.r  getEpisodeTable.r  getItemList.r  getPatientItems.r  helper.r  imputation.R  (+33 more)
app/: load_table.r  summary.r
data/: ITEM_REF.RData  ITEM_REF.yaml  ITEM_REFTABLE.RData  accept_completeness.yaml  data_item.csv  icnarc.rds  icnarc_table.RData  icnarc_table.csv  sample_ccd.RData
example/: clean_data.r  create2dclean.r  inject_db.r  load_table.r  summary.r
man/: ITEM_REF.Rd  StdId.Rd  add.Rd  add.episode.list.to.record.Rd  add.episode.to.record.Rd  add.record.to.record.Rd  (+185 more)
xml/: CMakeLists.txt
xml/data/: data_item.csv
xml/src/: CMakeLists.txt  ccxml.h  data_info.cc  data_info.h  load.cpp  patient_data.cc  patient_data.h  records.cc  records.h  type.h
xml/tests/: CMakeLists.txt  test1.cpp  test_datainfo.cc  test_patientdata.cc  test_records.cc
(+95 files in other folders)
